--- a/app/Resources/views/hit/new.html.twig
+++ b/app/Resources/views/hit/new.html.twig
@@ -8,7 +8,7 @@
         <input type="submit" value="Create" />
     {{ form_end(form) }}
 
-    <ul class="list-inline">
+    <ul class="list-inline functional_footer_menu">
         <li>
             <a href="{{ path('hit_index') }}" class="btn btn-primary">Back to the list</a>
         </li>
