--- a/app/Resources/views/hit/show.html.twig
+++ b/app/Resources/views/hit/show.html.twig
@@ -32,7 +32,7 @@
         </tbody>
     </table>
 
-    <ul class="list-inline">
+    <ul class="list-inline functional_footer_menu">
         <li>
             <a href="{{ path('hit_index') }}" class="btn btn-primary">Back to the list</a>
         </li>
