--- a/app/Resources/views/user/edit.html.twig
+++ b/app/Resources/views/user/edit.html.twig
@@ -8,7 +8,7 @@
         <input type="submit" class="btn btn-warning" value="Edit" />
     {{ form_end(edit_form) }}
 
-    <ul class="list-inline">
+    <ul class="list-inline functional_footer_menu">
         <li>
             <a href="{{ path('user_index') }}" class="btn btn-primary">Back to the list</a>
         </li>
