--- a/web/sass/_custom.scss
+++ b/web/sass/_custom.scss
@@ -49,12 +49,6 @@
   }
 }
 
-form {
-  #appbundle_definition,
-  #appbundle_hit,
-  #appbundle_node,
-  #appbundle_role,
-  #appbundle_user {
-    margin-bottom: ($grid-gutter-width * 2);
+.functional_footer_menu {
+    margin-top: ($grid-gutter-width * 2);
   }
-}
