--- a/app/Resources/views/definition/show.html.twig
+++ b/app/Resources/views/definition/show.html.twig
@@ -44,7 +44,7 @@
         </tbody>
     </table>
 
-    <ul class="list-inline">
+    <ul class="list-inline functional_footer_menu">
         <li>
             <a href="{{ path('definition_index') }}" class="btn btn-primary">Back to the list</a>
         </li>
