--- a/app/Resources/views/hit/index.html.twig
+++ b/app/Resources/views/hit/index.html.twig
@@ -25,7 +25,7 @@
                 <td>{{ hit.hitRemoteAddr }}</td>
                 <td>{{ hit.hitUserAgent }}</td>
                 <td>
-                    <ul class="list-inline">
+                    <ul class="list-inline functional_footer_menu">
                         <li>
                             <a href="{{ path('hit_show', { 'id': hit.id }) }}">show</a>
                         </li>
@@ -43,7 +43,7 @@
         {{ knp_pagination_render(hits) }}
     </div>
 
-    <ul class="list-inline">
+    <ul class="list-inline functional_footer_menu">
         <li>
             <a href="{{ path('hit_new') }}" class="btn btn-success">Create a new hit</a>
         </li>
