--- a/app/Resources/views/node/show.html.twig
+++ b/app/Resources/views/node/show.html.twig
@@ -40,7 +40,7 @@
         </tbody>
     </table>
 
-    <ul class="list-inline">
+    <ul class="list-inline functional_footer_menu">
         <li>
             <a href="{{ path('node_index') }}" class="btn btn-primary">Back to the list</a>
         </li>
