--- a/app/Resources/views/role/show.html.twig
+++ b/app/Resources/views/role/show.html.twig
@@ -20,7 +20,7 @@
         </tbody>
     </table>
 
-    <ul class="list-inline">
+    <ul class="list-inline functional_footer_menu">
         <li>
             <a href="{{ path('role_index') }}" class="btn btn-primary">Back to the list</a>
         </li>
