--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -27,7 +27,7 @@
                 <td>{{ user.origin }}</td>
                 <td>{% if user.status %}Yes{% else %}No{% endif %}</td>
                 <td>
-                    <ul class="list-inline">
+                    <ul class="list-inline functional_footer_menu">
                         <li>
                             <a href="{{ path('user_show', { 'id': user.id }) }}">show</a>
                         </li>
@@ -41,7 +41,7 @@
         </tbody>
     </table>
 
-    <ul class="list-inline">
+    <ul class="list-inline functional_footer_menu">
         <li>
             <a href="{{ path('user_new') }}" class="btn btn-success">Create a new user</a>
         </li>
