--- a/web/stylesheets/screen.css
+++ b/web/stylesheets/screen.css
@@ -224,5 +224,5 @@ a.list-group-item-danger.active:hover, a.list-group-item-danger.active:focus {
 }
 
 .functional_footer_menu {
-  margin-bottom: 60px;
+  margin-top: 60px;
 }
