--- a/app/Resources/views/dictionary/single.node.html.twig
+++ b/app/Resources/views/dictionary/single.node.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}{{ node.title }}{% endblock %}
 
+{% block canonical %}<link href="{{ path('single_node', { 'slug': node.slug }) }}" rel="canonical">{% endblock %}
+
 {% block body %}
     <h1>{{ node.title }}</h1>
 
