--- a/app/Resources/views/dizionario.html.twig
+++ b/app/Resources/views/dizionario.html.twig
@@ -5,11 +5,11 @@
     <div class="panel-body">
         <header>
             {% for i in 'a'|upper..'z'|upper %}
-                <a href="{{ path('list_nodes', { 'letter': i, 'page': 1 }) }}"><span class="label label-default">{{ i }}</span></a>
+                <a href="{{ url('list_nodes', { 'letter': i, 'page': 1 }, true) }}"><span class="label label-default">{{ i }}</span></a>
             {% endfor %}
         </header>
         <footer>
-            <a href="{{ path('list_bysymbol_nodes', { 'page': 1 }) }}">Vocaboli che iniziano con simboli</a>
+            <a href="{{ url('list_bysymbol_nodes', { 'page': 1 }, true) }}">Vocaboli che iniziano con simboli</a>
         </footer>
     </div>
 </div>
