--- a/app/Resources/views/definition/index.html.twig
+++ b/app/Resources/views/definition/index.html.twig
@@ -31,7 +31,7 @@
                 <td>{% if definition.updated %}{{ definition.updated|date('d-m-Y H:i:s') }}{% endif %}</td>
                 <td>{% if definition.created %}{{ definition.created|date('d-m-Y H:i:s') }}{% endif %}</td>
                 <td>
-                    <ul class="list-inline functional_footer_menu">
+                    <ul class="list-inline">
                         <li>
                             <a href="{{ path('definition_show', { 'id': definition.id }) }}">show</a>
                         </li>
