--- a/app/Resources/views/hit/index.html.twig
+++ b/app/Resources/views/hit/index.html.twig
@@ -25,7 +25,7 @@
                 <td>{{ hit.hitRemoteAddr }}</td>
                 <td>{{ hit.hitUserAgent }}</td>
                 <td>
-                    <ul class="list-inline functional_footer_menu">
+                    <ul class="list-inline">
                         <li>
                             <a href="{{ path('hit_show', { 'id': hit.id }) }}">show</a>
                         </li>
