--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -27,7 +27,7 @@
                 <td>{{ user.origin }}</td>
                 <td>{% if user.status %}Yes{% else %}No{% endif %}</td>
                 <td>
-                    <ul class="list-inline functional_footer_menu">
+                    <ul class="list-inline">
                         <li>
                             <a href="{{ path('user_show', { 'id': user.id }) }}">show</a>
                         </li>
