--- a/app/Resources/views/node/index.html.twig
+++ b/app/Resources/views/node/index.html.twig
@@ -48,7 +48,7 @@
 
     <ul class="list-inline functional_footer_menu">
         <li>
-            <a href="{{ path('node_new') }}" class="btn btn-success">Create a new node</a>
+            <a href="{{ path('backend_new_node') }}" class="btn btn-success">Create a new node</a>
         </li>
     </ul>
 {% endblock %}
