--- a/app/Resources/views/user_menu.html.twig
+++ b/app/Resources/views/user_menu.html.twig
@@ -6,7 +6,7 @@
     <ul class="dropdown-menu" aria-labelledby="dropdownUserMenu">
         <li><a href="{{ url('backend_profile_view', { }, true) }}">Vedi</a></li>
         <li><a href="{{ url('backend_profile_edit', { }, true) }}">Modifica</a></li>
-        <li><a href="{{ url('backend_profile_reset', { }, true) }}">Resetta Password</a></li>
+        <li><a href="{{ url('backend_profile_changepassword', { }, true) }}">Cambia Password</a></li>
         <li><a href="{{ url('logout', { }, true) }}">Log Out</a></li>
     </ul>
 </div>
