--- a/web/sass/_custom.scss
+++ b/web/sass/_custom.scss
@@ -52,3 +52,13 @@
 .functional_footer_menu {
     margin-top: ($grid-gutter-width * 2);
 }
+
+.flash-error_msg {
+  @extend .alert;
+  @extend .alert-danger;
+}
+
+.flash-error_msg {
+  @extend .alert;
+  @extend .alert-danger;
+}
