--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -27,7 +27,7 @@
 
     <ul class="list-inline functional_footer_menu">
         <li><a href="{{ path('security_new_user') }}" class="btn btn-primary">Registrati</a></li>
-        <li>password dimenticata</li>
+        <li><a href="{{ path('security_reset_password') }}" class="btn btn-danger">Password dimenticata</a></li>
     </ul>
 
 {% endblock %}
