--- a/app/Resources/views/dictionary/single.node.html.twig
+++ b/app/Resources/views/dictionary/single.node.html.twig
@@ -29,6 +29,9 @@
                         <a href="#{{ entity.d_id }}"><span class="glyphicon glyphicon-plus"></span></a>
                         <a href="#{{ entity.d_id }}"><span class="glyphicon glyphicon-minus"></span></a> |
                         Voti: <span class="badge poll">{{ entity.d_poll }}</span>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <a href="{{ path('definition_edit', { 'id': entity.d_id }) }}" target="_blank"><i class="fa fa-pencil-square" aria-hidden="true"></i> edit</a>
+                        {% endif %}
                     </footer>
                 </article>
             </div>
