--- a/app/Resources/views/user_menu.html.twig
+++ b/app/Resources/views/user_menu.html.twig
@@ -1,4 +1,4 @@
-<div class="dropdown pull-right">
+<div class="dropdown dropdown-menu-right">
     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownUserMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
         Profilo Personale
         <span class="caret"></span>
