--- a/app/Resources/views/user_menu.html.twig
+++ b/app/Resources/views/user_menu.html.twig
@@ -1,9 +1,9 @@
-<div class="dropdown dropdown-menu-right">
+<div class="dropdown pull-right">
     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownUserMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
         Profilo Personale
         <span class="caret"></span>
     </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownUserMenu">
+    <ul class="dropdown-menu-right" aria-labelledby="dropdownUserMenu">
         <li><a href="{{ url('backend_profile_view', { }, true) }}">Vedi</a></li>
         <li><a href="{{ url('backend_profile_edit', { }, true) }}">Modifica</a></li>
         <li><a href="{{ url('backend_profile_changepassword', { }, true) }}">Cambia Password</a></li>
