--- a/app/Resources/views/user_menu.html.twig
+++ b/app/Resources/views/user_menu.html.twig
@@ -3,7 +3,7 @@
         Profilo Personale
         <span class="caret"></span>
     </button>
-    <ul class="dropdown-menu-right" aria-labelledby="dropdownUserMenu">
+    <ul class="dropdown-menu" aria-labelledby="dropdownUserMenu">
         <li><a href="{{ url('backend_profile_view', { }, true) }}">Vedi</a></li>
         <li><a href="{{ url('backend_profile_edit', { }, true) }}">Modifica</a></li>
         <li><a href="{{ url('backend_profile_changepassword', { }, true) }}">Cambia Password</a></li>
