analitics and ads

--- a/app/Resources/views/dictionary/single.node.html.twig
+++ b/app/Resources/views/dictionary/single.node.html.twig
@@ -40,6 +40,19 @@
         </div>
     {% endfor %}
 
+        <!-- codice circuito  Pnet Publisher Network-->
+        <!-- Spazio:  bruttastoria_it_336x280 -->
+        <script type="text/javascript">
+            amm_zt = 0;
+            amm_ad_siteid = 3889;
+            amm_ad_zone = 52968;
+            amm_ad_width = 336;
+            amm_ad_height = 280;
+        </script>
+        <script type="text/javascript" src="http://adv.arubamediamarketing.it/js/amm_show_ads.js">
+        </script>
+        <!-- codice circuito  Pnet Publisher Network - fine-->
+
     {% if related %}
         <h3>Figate collegate</h3>
         <ul class="list-inline">
