--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -23,4 +23,17 @@
     <a href="https://lorisrighetto.com/abcdiario-di-lingua-e-mitologia-urbana/"><img src="{{ asset('images/abcdiario.jpg') }}" class="img-responsive"></a>
 </aside>
 
-
+<aside>
+    <!-- codice circuito  Pnet Publisher Network-->
+    <!-- Spazio:  bruttastoria_it_180x150 -->
+    <script type="text/javascript">
+        amm_zt = 0;
+        amm_ad_siteid = 3889;
+        amm_ad_zone = 52964;
+        amm_ad_width = 180;
+        amm_ad_height = 150;
+    </script>
+    <script type="text/javascript" src='http://adv.arubamediamarketing.it/js/amm_show_ads.js'>
+    </script>
+    <!-- codice circuito  Pnet Publisher Network - fine-->
+</aside>
