--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,11 +8,12 @@
     <title>{% block title %}{% endblock %} - Brutta Storia</title>
 
     {% block stylesheets %}{% endblock %}
-    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="{{ asset('stylesheets/screen.css') }}" media="screen, projection" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/jquery.cookiecuttr/1.0/cookiecuttr.css" rel="stylesheet" type="text/css">
     {% block canonical %}{% endblock %}
 
     <!--[if lt IE 9]>
@@ -81,19 +82,27 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-2062212-7', 'auto');
+    ga('create', 'UA-2062212-4', 'auto');
     ga('send', 'pageview');
-
 </script>
 
 {% block script %}{% endblock %}
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
+<!-- Bootstrap core JavaScript ================================================== -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/g/jquery.cookie@1.4.1,jquery.cookiecuttr@1.0"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="{{ asset('js-scripts/assets.js') }}"></script>
+<script>
+    $(document).ready(function () {
+        $.cookieCuttr({
+            cookieAnalytics: false,
+            cookiePolicyLink: '{{ url('page_privacypolicy') }}',
+            cookieMessage: 'Questo sito utilizza i Cookie. Continuando la navigazione, acconsenti al loro utilizzo. <a href="{{cookiePolicyLink}}" title="Approfondisci la nostra cookies policy">Approfondisci</a>',
+            cookieAcceptButtonText: 'OK',
+        });
+    });
+</script>
 </body>
 </html>
