analitics and ads

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -101,6 +101,7 @@
             cookiePolicyLink: '{{ url('page_privacypolicy') }}',
             cookieMessage: 'Questo sito utilizza i Cookie. Continuando la navigazione, acconsenti al loro utilizzo. <a href="{{cookiePolicyLink}}" title="Approfondisci la nostra cookies policy">Approfondisci</a>',
             cookieAcceptButtonText: 'OK',
+            cookieNotificationLocationBottom: true,
         });
     });
 </script>
