analitics and ads

--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -24,16 +24,16 @@
 </aside>
 
 <aside>
-    <!-- codice circuito  Pnet Publisher Network-->
-    <!-- Spazio:  bruttastoria_it_180x150 -->
+    <!-- codice circuito  Pnet Publisher Network -->
+    <!-- Spazio:  bruttastoria_it_260x90 -->
     <script type="text/javascript">
         amm_zt = 0;
         amm_ad_siteid = 3889;
-        amm_ad_zone = 52964;
-        amm_ad_width = 180;
-        amm_ad_height = 150;
+        amm_ad_zone = 52965;
+        amm_ad_width = 260;
+        amm_ad_height = 90;
     </script>
-    <script type="text/javascript" src='http://adv.arubamediamarketing.it/js/amm_show_ads.js'>
+    <script type="text/javascript" src='//advdl.ammadv.it/js/amm_show_ads_ntag.js'>
     </script>
     <!-- codice circuito  Pnet Publisher Network - fine-->
 </aside>
