e i link in blank con ce li mettiamo?

--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -5,7 +5,7 @@
         <li><a href="{{ url('page_manifesto') }}">Che cos'è <strong>Brutta Storia</strong>?</a></li>
         <li><a href="mailto:redazione.bruttastoria@gmail.com">Contatta la <strong>Redazione Brutta Storia</strong></a></li>
         <li><a href="{{ url('page_privacypolicy', { }, true) }}">Privacy Policy</a></li>
-        <li><a href="http://www.facebook.com/pages/Brutta-Storia-Manuale-di-lingua-e-mitologia-urbana/150473342139" target="_blank"><strong>Brutta Storia</strong> @ <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+        <li><a href="https://fb.me/BruttaStoria.LinguaeMitologiaUrbana" target="_blank"><strong>Brutta Storia</strong> @ <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
     </ul>
 </aside>
 
