--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,16 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>{% block title %}{% endblock %} - Brutta Storia</title>
-
     {% block stylesheets %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="{{ asset('stylesheets/screen.css') }}" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/jquery.cookiecuttr/1.0/cookiecuttr.css" rel="stylesheet" type="text/css">
+    <link href="{{ asset('stylesheets/screen.css') }}" media="screen, projection" rel="stylesheet" type="text/css">
     {% block canonical %}{% endblock %}
 
     <!--[if lt IE 9]>
@@ -99,7 +97,7 @@
         $.cookieCuttr({
             cookieAnalytics: false,
             cookiePolicyLink: '{{ url('page_privacypolicy') }}',
-            cookieMessage: 'Questo sito utilizza i Cookie. Continuando la navigazione, acconsenti al loro utilizzo. <a href="{{cookiePolicyLink}}" title="Approfondisci la nostra cookies policy">Approfondisci</a>',
+            cookieMessage: 'Questo sito utilizza i Cookie. Continuando la navigazione, acconsenti al loro utilizzo. <a href="{{ '{{' }}cookiePolicyLink{{ '}}' }}" title="Approfondisci la nostra cookies policy">Approfondisci</a>',
             cookieAcceptButtonText: 'OK',
             cookieNotificationLocationBottom: true,
         });
