--- a/app/Resources/views/page/manifesto.html.twig
+++ b/app/Resources/views/page/manifesto.html.twig
@@ -101,23 +101,10 @@
 
     <p>10/07/14</p>
 
-    <p><a href="http://creativecommons.org/licenses/by-nc-sa/2.5/it/" rel="license"><img alt="Creative Commons License"
-                                                                                         src="http://i.creativecommons.org/l/by-nc-sa/2.5/it/88x31.png"
-                                                                                         style="border-width: 0pt;"/></a>
-    </p>
 
-    <p><span href="http://purl.org/dc/dcmitype/Text" property="dc:title" rel="dc:type"
-             xmlns:dc="http://purl.org/dc/elements/1.1/">Brutta Storia - Manuale di lingua e mitologia urbana</span> by
-        <a href="http://www.bruttastoria.it" property="cc:attributionName" rel="cc:attributionURL"
-           xmlns:cc="http://creativecommons.org/ns#">Brutta Storia</a> is licensed under a <a
-                href="http://creativecommons.org/licenses/by-nc-sa/2.5/it/" rel="license">Creative Commons
-            Attribuzione-Non commerciale-Condividi allo stesso modo 2.5 Italia License</a>.</p>
-
-    <p>Based on a work at <a href="http://www.bruttastoria.it" rel="dc:source"
-                             xmlns:dc="http://purl.org/dc/elements/1.1/">www.bruttastoria.it</a>.</p>
-
-    <p>Permissions beyond the scope of this license may be available at <a href="http://www.bruttastoria.it"
-                                                                           rel="cc:morePermissions"
-                                                                           xmlns:cc="http://creativecommons.org/ns#">http://www.bruttastoria.it</a>.
-    </p>
+  <p>
+    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Brutta Storia - Manuale di lingua e mitologia urbana</span> di
+    <a xmlns:cc="http://creativecommons.org/ns#" href="https://www.bruttastoria.it" property="cc:attributionName" rel="cc:attributionURL">Righetto Loris</a> è distribuito con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+    <br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://www.bruttastoria.it" rel="dct:source">https://www.bruttastoria.it</a>.
+  </p>
 {% endblock %}
